# jelly-sync

./: .gitignore  LICENSE  pyproject.toml
src/jellysync/: __init__.py  jellysync.py
