[project]
name = "jellysync"
version = "0.1.0"
description = "Sync content between Jellyfin servers"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["httpx>=0.27.2", "rich>=13.8.0"]

[project.scripts]
jelly-sync = "jellysync:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
